Fix footer styles on tablet/mobile

--- a/gatsby-theme-hello-friend-ng/src/assets/scss/default.scss
+++ b/gatsby-theme-hello-friend-ng/src/assets/scss/default.scss
@@ -181,3 +181,9 @@ pre {
 .footer__content > :last-child {
   padding: 0;
 }
+
+@media #{$media-size-tablet} {
+  .footer__content > :not(:last-child)::after {
+    padding: 0;
+  }
+}
